--- a/source/ExtracurricularActivity/index.html
+++ b/source/ExtracurricularActivity/index.html
@@ -16,8 +16,8 @@
 
         .image-container img {
             flex: 0 0 auto;
-            width: 150px;
-            height: 150px;
+            width: 300px;
+            /* height: 300px; */
             object-fit: cover;
             margin-right: 10px;
             border-radius: 10px;
@@ -36,13 +36,13 @@
     <div class="item">
         <h2>Leadership and Charm: A Meaningful Dialogue with USC President Carol L. Folt</h2>
         <p>In a memorable encounter, I had the privilege of engaging in a meaningful conversation with USC President
-            Carol L. Folt. Her engaging wit and charisma deeply impressed me, making our discussion both enlightening
+            <a href="https://www.president.usc.edu/biography/">Carol L. Folt.</a> Her engaging wit and charisma deeply impressed me, making our discussion both enlightening
             and enjoyable. This experience, captured in our photos, truly highlights the vibrant leadership at USC.</p>
         <div class="image-container">
+            <img src="/img/activity/one/IMG_2353.jpg" alt="IMG 4">
             <img src="/img/activity/one/IMG_2349.jpg" alt="IMG 1">
             <img src="/img/activity/one/IMG_2350.jpg" alt="IMG 2">
             <img src="/img/activity/one/IMG_2351.jpg" alt="IMG 3">
-            <img src="/img/activity/one/IMG_2353.jpg" alt="IMG 4">
         </div>
         <hr>
     </div>
@@ -54,10 +54,23 @@
             commemorate the moment with some photos.</p>
         
         <div class="image-container">
-            <img src="/img/activity/two/IMG_0237.jpg" alt="IMG 1">
-            <img src="/img/activity/two/IMG_0245.jpg" alt="IMG 2">
             <img src="/img/activity/two/IMG_0248.jpg" alt="IMG 3">
             <img src="/img/activity/two/IMG_0254.jpg" alt="IMG 4">
+            <img src="/img/activity/two/IMG_0237.jpg" alt="IMG 1">
+            <img src="/img/activity/two/IMG_0245.jpg" alt="IMG 2">
+        </div>
+        <hr>
+    </div>
+    <div class="item">
+        <h2>USC Conquest 2023: Beats, Challenges, and Community Spirit</h2>
+        <p>On November 15, 2023, I captured the vibrant essence of USC's Native American Heritage Month event through my
+            camera. President Carol Folt's speech and the dynamic performances were particularly inspiring. As an
+            international student, photographing and experiencing this rich cultural celebration was exhilarating,
+            deepening my understanding and excitement about diverse traditions.</p>
+        <div class="image-container">
+            <img src="/img/activity/four/IMG_5746.jpg" alt="IMG 3">
+            <img src="/img/activity/four/IMG_5715.jpg" alt="IMG 1">
+            <img src="/img/activity/four/IMG_5735.jpg" alt="IMG 2">
         </div>
         <hr>
     </div>
@@ -73,19 +86,7 @@
         </div>
         <hr>
     </div>
-    <div class="item">
-        <h2>USC Conquest 2023: Beats, Challenges, and Community Spirit</h2>
-        <p>On November 15, 2023, I captured the vibrant essence of USC's Native American Heritage Month event through my
-            camera. President Carol Folt's speech and the dynamic performances were particularly inspiring. As an
-            international student, photographing and experiencing this rich cultural celebration was exhilarating,
-            deepening my understanding and excitement about diverse traditions.</p>
-        <div class="image-container">
-            <img src="/img/activity/four/IMG_5715.jpg" alt="IMG 1">
-            <img src="/img/activity/four/IMG_5735.jpg" alt="IMG 2">
-            <img src="/img/activity/four/IMG_5746.jpg" alt="IMG 3">
-        </div>
-        <hr>
-    </div>
+    
 
 </body>
 </html>
