--- a/source/DSProjects/index.html
+++ b/source/DSProjects/index.html
@@ -85,7 +85,7 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Curated and stored USC Recreational Sports Club Instagram posts in MongoDB with pymongo.</li>
+                    <li>Curated and stored USC Recreational Sports Club Instagram posts in <b>MongoDB</b> with pymongo.</li>
                     <li>Built Flask web app emulating Firebase, enabling RESTful API actions via command URLs.</li>
                     <li>Enhanced user engagement with real-time post and comment interactions using SocketIO.</li>
                     <li>UCrafted responsive UI with HTML/CSS for key pages (Home, Account, Post Detail).</li>
