--- a/source/Projects/index.html
+++ b/source/Projects/index.html
@@ -77,7 +77,7 @@
             <td class="paper">
                 <papertitle><b>OnlineOrder: A Spring and Hibernate based online food ordering system.</b>
                 </papertitle>
-                <p id="techstack"><i>Rest API, Spring MVC, Hibernate, Spring security, ReactJS, Ant Design, </i></p>
+                <p id="techstack"><i>Restful API, Spring MVC, Hibernate, Spring security, ReactJS, Ant Design, </i></p>
                 2022
                 <p><a href="https://youtu.be/SY1kY_mvOyI" style="color:blue;">Video Introduction</a> | Code Details (<a href="https://github.com/zli86605/onlineorder-Frontend" style="color:blue;">frontend</a> / <a href="https://github.com/zli86605/onlineorder-backend" style="color:blue;">backend</a>)</p>
             </td>
@@ -85,7 +85,7 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Implemented Rest API via Spring MVC including registration, menu searching , ordering, and checkout.</li>
+                    <li>Implemented <b>Restful API</b> via Spring MVC including registration, menu searching , ordering, and checkout.</li>
                     <li>Utilized Hibernate to access and operate the data storage(menu, restaurants etc.).</li>
                     <li>Provided both authentication and authorization via Spring security to protect the application from malicious attacks.</li>
                     <li>Used the Spring framework core technologies to loosely decouple all the components in the application.</li>
