--- a/source/DSProjects/index.html
+++ b/source/DSProjects/index.html
@@ -85,10 +85,10 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Curated and stored USC Recreational Sports Club Instagram posts in <b>MongoDB</b> with pymongo.</li>
-                    <li>Built Flask web app emulating Firebase, enabling RESTful API actions via command URLs.</li>
-                    <li>Enhanced user engagement with real-time post and comment interactions using SocketIO.</li>
-                    <li>UCrafted responsive UI with HTML/CSS for key pages (Home, Account, Post Detail).</li>
+                    <li>Curated and stored USC Recreational Sports Club Instagram posts in <b>MongoDB</b> with <b>pymongo</b>.</li>
+                    <li>Built <b>Flask web</b> app emulating <b>Firebase</b>, enabling <b>RESTful API</b> actions via command URLs.</li>
+                    <li>Enhanced user engagement with real-time post and comment interactions using <b>SocketIO</b>.</li>
+                    <li>UCrafted responsive UI with <b>HTML/CSS</b> for key pages (Home, Account, Post Detail).</li>
                     <li>Empowered users for dynamic social interaction: create, view, update, delete posts, and manage comments.</li>
                 </p>
             </td>
@@ -113,10 +113,10 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Utilized Python and Scikit-learn to process and analyze a six-year dataset from a Combined Cycle Power Plant, emphasizing hourly ambient variables. </li>
-                    <li>Applied linear regression techniques, both simple and multiple, to identify statistically significant predictors of energy output.</li>
-                    <li>Explored nonlinear dynamics using polynomial regression models, and enhanced model robustness by integrating quadratic nonlinearities and interaction terms.</li>
-                    <li>Implemented and tuned k-nearest neighbor (KNN) regression using raw and normalized features, determining optimal 'k' values and assessing model performance.</li>
+                    <li>Utilized <b>Python</b> and <b>Scikit-learn</b> to process and analyze a six-year dataset from a Combined Cycle Power Plant, emphasizing hourly ambient variables. </li>
+                    <li>Applied <b>linear regression</b> techniques, both simple and multiple, to identify statistically significant predictors of energy output.</li>
+                    <li>Explored nonlinear dynamics using <b>polynomial regression models</b>, and enhanced model robustness by integrating quadratic nonlinearities and interaction terms.</li>
+                    <li>Implemented and tuned <b>k-nearest neighbor (KNN) regression</b> using raw and normalized features, determining optimal 'k' values and assessing model performance.</li>
                     <li>Conducted a comparative evaluation of KNN Regression and linear regression models, drawing insights on prediction accuracy and model efficacy.</li>
                 </p>
             </td>
@@ -139,11 +139,11 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Leveraged time series data from a Wireless Sensor Network to classify human activities, using datasets from the AReM repository, encompassing seven diverse activity types.</li>
+                    <li>Leveraged <b>time series data</b> from a Wireless Sensor Network to classify human activities, using datasets from the AReM repository, encompassing seven diverse activity types.</li>
                     <li>Conducted feature extraction from the time series data, researching and implementing time-domain features like minimum, maximum, mean, median, standard deviation, and quartiles.</li>
-                    <li>Utilized logistic regression for binary classification, applying techniques like recursive feature elimination and assessing model performance through scatter plots, confusion matrices, ROC curves, and AUC metrics.</li>
-                    <li>Enhanced model robustness by implementing L1-penalized logistic regression, optimizing for both time series split parameter (l) and regularization weight (λ), and comparing against traditional variable selection using p-values.</li>
-                    <li>Executed multi-class classification using L1-penalized multinomial regression and Naïve Bayes classifiers (with Gaussian and Multinomial priors), evaluating and contrasting their performance for comprehensive activity classification. </li>
+                    <li>Utilized <b>logistic regression</b> for binary classification, applying techniques like recursive feature elimination and assessing model performance through scatter plots, confusion matrices, ROC curves, and AUC metrics.</li>
+                    <li>Enhanced model robustness by implementing <b>L1-penalized logistic regression</b>, optimizing for both time series split parameter (l) and regularization weight (λ), and comparing against traditional variable selection using p-values.</li>
+                    <li>Executed <b>multi-class classification</b> using L1-penalized multinomial regression and Naïve Bayes classifiers (with Gaussian and Multinomial priors), evaluating and contrasting their performance for comprehensive activity classification. </li>
                 </p>
             </td>
         </tr>
@@ -166,11 +166,11 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Address the APS Failure dataset that contains missing values. Investigate data imputation techniques and select at least one method to apply on the dataset.</li>
-                    <li>Directly classify the dataset using random forests without compensating for class imbalance. Calculate and report the confusion matrix, ROC, AUC, and misclassification rates for training and test sets.</li>
+                    <li>Address the APS Failure dataset that contains missing values. Investigate <b>data imputation techniques</b> and select at least one method to apply on the dataset.</li>
+                    <li>Directly classify the dataset using <b>random forests</b> without compensating for class imbalance. Calculate and report the <b>confusion matrix</b>, <b>ROC</b>, <b>AUC</b>, and misclassification rates for training and test sets.</li>
                     <li>Research how class imbalance is tackled in random forests. After compensating the data, redo the classification step with random forests and compare the results with the uncompensated approach.</li>
-                    <li>Implement L1-penalized logistic regression at each node and utilize XGBoost for model tree fitting. Use cross-validation to determine the regularization term and train the model for the APS dataset.</li>
-                    <li>Pre-process the data using the SMOTE (Synthetic Minority Over-sampling Technique) to address class imbalance. Train the XGBoost model again and compare the results with the non-compensated scenario.</li>
+                    <li>Implement <b>L1-penalized logistic regression</b> at each node and utilize <b>XGBoost</b> for model tree fitting. Use cross-validation to determine the regularization term and train the model for the APS dataset.</li>
+                    <li>Pre-process the data using the <b>SMOTE (Synthetic Minority Over-sampling Technique)</b> to address class imbalance. Train the XGBoost model again and compare the results with the non-compensated scenario.</li>
                 </p>
             </td>
         </tr>
@@ -194,11 +194,11 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Download the Anuran Calls (MFCCs) Data Set and allocate 70% for training.</li>
-                    <li>Train separate SVMs for each label (Families, Genus, Species) with Gaussian kernels. Evaluate using exact match and hamming score/loss.</li>
-                    <li>Implement L1-penalized SVMs with standardized attributes and determine SVM penalty using cross-validation.</li>
+                    <li>Download the <b>Anuran Calls (MFCCs)</b> Data Set and allocate 70% for training.</li>
+                    <li>Train separate SVMs for each label (Families, Genus, Species) with <b>Gaussian kernels</b>. Evaluate using exact match and <b>hamming score/loss</b>.</li>
+                    <li>Implement <b>L1-penalized SVMs</b> with standardized attributes and determine SVM penalty using <b>cross-validation</b>.</li>
                     <li>Apply SMOTE or a similar method to address class imbalance and evaluate the classifiers.</li>
-                    <li>Implement k-means clustering on the full dataset, determine majority labels for each cluster, and compute the Hamming distance, score, and loss.</li>
+                    <li>Implement <b>k-means clustering</b> on the full dataset, determine majority labels for each cluster, and compute the <b>Hamming distance</b>, score, and loss.</li>
                 </p>
             </td>
         </tr>
