--- a/source/Projects/index.html
+++ b/source/Projects/index.html
@@ -85,11 +85,11 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Implemented <b>Restful API</b> via Spring MVC including registration, menu searching , ordering, and checkout.</li>
-                    <li>Utilized Hibernate to access and operate the data storage(menu, restaurants etc.).</li>
-                    <li>Provided both authentication and authorization via Spring security to protect the application from malicious attacks.</li>
+                    <li>Implemented <b>Restful API</b> via <b>Spring MVC</b> including registration, menu searching , ordering, and checkout.</li>
+                    <li>Utilized <b>Hibernate</b> to access and operate the data storage(menu, restaurants etc.).</li>
+                    <li>Provided both authentication and authorization via <b>Spring security</b> to protect the application from malicious attacks.</li>
                     <li>Used the Spring framework core technologies to loosely decouple all the components in the application.</li>
-                    <li>Build the client side with ReactJS and Ant Design to allow users to add items to the shopping cart and place orders.</li>
+                    <li>Build the client side with <b>ReactJS</b> and <b>Ant Design</b> to allow users to add items to the shopping cart and place orders.</li>
                 </p>
             </td>
         </tr>
@@ -116,10 +116,10 @@
                     <i>Frontend</i>
                     <li>Designed and implemented a social network web application with React JS. </li>
                     <li>Implemented features for users to create and browse posts and support search nearby posts.</li>
-                    <li>Improved the authentication using token based registration/login/logout flow with React Router v4 and server-side user authentication with JWT.</li>
+                    <li>Improved the authentication using token based registration/login/logout flow with <b>React Router v4</b> and server-side user authentication with <b>JWT</b>.</li>
                     <i>BackEnd</i>
-                    <li>Launched a scalable web service in Go to handle posts and deployed to Google Cloud (Google App Engine).</li>
-                    <li>Used ElasticSearch (deployed to GCE) to provide search functions such that users can search recent posts and list personal posts.</li>
+                    <li>Launched a scalable web service in <b>Go</b> to handle posts and deployed to <b>Google Cloud (Google App Engine)</b>.</li>
+                    <li>Used <b>ElasticSearch (deployed to GCE)</b> to provide search functions such that users can search recent posts and list personal posts.</li>
                 </p>
             </td>
         </tr>
@@ -141,11 +141,11 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Designed the Instagram Flavor News app based on Google Component Architectural MVVM Pattern</li>
-                    <li>Implemented the bottom bar & page navigation using JetPack navigation component.</li>
-                    <li>Utilized Mindorks’s PlaceHolderView to support swipe gestures for liking/disliking the news.</li>
+                    <li>Designed the Instagram Flavor News app based on <b>Google Component Architectural MVVM Pattern</b></li>
+                    <li>Implemented the bottom bar & page navigation using <b>JetPack navigation component</b>.</li>
+                    <li>Utilized <b>Mindorks’s PlaceHolderView</b> to support swipe gestures for liking/disliking the news.</li>
                     <li>Built the Room Database with LiveData & ViewModel to support local cache and offline model.</li>
-                    <li>Integrated Retrofit and Rxjava to pull the latest news data from a RESTFUL endpoint (newsapi.org). </li>
+                    <li>Integrated <b>Retrofit</b> and <b>Rxjava</b> to pull the latest news data from a <b>RESTFUL</b> endpoint (<b>newsapi.org</b>). </li>
                 </p>
             </td>
         </tr>
@@ -168,10 +168,10 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Designed and developed a visualization dashboard using ReactJS and D3 to track satellites in real-time based on geo-location.</li>
+                    <li>Designed and developed a visualization dashboard using <b>ReactJS</b> and <b>D3</b> to track satellites in real-time based on geo-location.</li>
                     <li>Built location, altitude, and duration based selector to refine satellite search.</li>
                     <li>Animated selected satellite paths on a world map using D3 to improve the user-friendliness.</li>
-                    <li>Deployed the dashboard to Amazon Web Service for demonstration</li>
+                    <li>Deployed the dashboard to <b>Amazon Web Service</b> for demonstration</li>
                 </p>
             </td>
         </tr>
