--- a/source/SSCI/index.html
+++ b/source/SSCI/index.html
@@ -86,9 +86,9 @@
             <td class="paper" colspan="2">
                 <p>
                     <li>Mapped housing prices in King County, WA, utilizing local spatial summary metrics to highlight key spatial patterns and relationships.</li>
-                    <li>Conducted data visualization to present relationships between house prices and influential variables, providing insights into primary price drivers.</li>
-                    <li>Employed Generalized Linear Regression (GLR) and Geographically Weighted Regression (GWR) models, comparing their effectiveness through regression diagnostics.</li>
-                    <li>Utilized Forest-Based Classification and Regression tools and neural network models via scikit-learn's MLPRegressor, optimizing predictive accuracy through various topologies and learning rates.</li>
+                    <li>Conducted <b>data visualization</b> to present relationships between house prices and influential variables, providing insights into primary price drivers.</li>
+                    <li>Employed <b>Generalized Linear Regression (GLR)</b> and <b>Geographically Weighted Regression (GWR)</b> models, comparing their effectiveness through regression diagnostics.</li>
+                    <li>Utilized <b>Forest-Based Classification and Regression</b> tools and <b>neural network models</b> via scikit-learn's MLPRegressor, optimizing predictive accuracy through various topologies and learning rates.</li>
                     <li>Critically assessed and compared all regression models, drawing conclusions on their insights into the King County housing market dynamics.</li>
                 </p>
             </td>
@@ -113,11 +113,11 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Analyzed the prevalence and distribution of diabetes across different regions using Python and SQL for data processing </li>
-                    <li>Investigated the correlation between health-related factors and the onset of diabetes, leveraging Machine Learning algorithms in Python.</li>
-                    <li>Utilized ArcGIS tools and JavaScript API to visualize and interpret complex health data.</li>
-                    <li>Collaborated with a team to gather, clean, and process relevant health datasets using Pandas and NumPy.</li>
-                    <li>Developed an interactive story map with ArcGIS Online and integrated it with Web AppBuilder to communicate findings and insights to a broader audience.</li>
+                    <li>Analyzed the prevalence and distribution of diabetes across different regions using <b>Python</b> and <b>SQL</b> for data processing </li>
+                    <li>Investigated the correlation between health-related factors and the onset of diabetes, leveraging <b>Machine Learning algorithms</b> in Python.</li>
+                    <li>Utilized <b>ArcGIS tools</b> and <b>JavaScript API</b> to visualize and interpret complex health data.</li>
+                    <li>Collaborated with a team to gather, clean, and process relevant health datasets using <b>Pandas</b> and <b>NumPy</b>.</li>
+                    <li>Developed an interactive story map with <b>ArcGIS Online</b> and integrated it with <b>Web AppBuilder</b> to communicate findings and insights to a broader audience.</li>
                 </p>
             </td>
         </tr>
@@ -139,9 +139,9 @@
         <tr>
             <td class="paper" colspan="2">
                 <p>
-                    <li>Utilized open-source Python libraries and Jupyter Project tools to conduct spatial analysis, focusing on the study areas of Antwerpen, Belgium, and Berlin, Germany.</li>
-                    <li>Employed GeoPandas to manipulate spatial data, reproject layers, and calculate minimum distances between green urban areas and buildings.</li>
-                    <li>Set up the environment using Anaconda-Navigator and integrated essential packages like earthpy and GeoPandas.</li>
+                    <li>Utilized open-source <b>Python libraries</b> and <b>Jupyter Project tools</b> to conduct spatial analysis, focusing on the study areas of Antwerpen, Belgium, and Berlin, Germany.</li>
+                    <li>Employed <b>GeoPandas</b> to manipulate spatial data, reproject layers, and calculate minimum distances between green urban areas and buildings.</li>
+                    <li>Set up the environment using <b>Anaconda-Navigator</b> and integrated essential packages like <b>earthpy</b> and GeoPandas.</li>
                     <li>Analyzed and visualized land use, street lines, and building data for both study areas, effectively reprojecting coordinate systems and calculating distances between buildings and green areas.</li>
                     <li>Interpreted results, highlighting the significance of dataset selection and the impact of local conditions on spatial analysis outcomes. </li>
                 </p>
