--- a/source/Projects/index.html
+++ b/source/Projects/index.html
@@ -70,11 +70,11 @@
         
     }
 </style>
-<div class="project-entry">
+<div class="project-entry" id="CS_1">
     <div class="background-image" style="background-image: url('/img/OnlineOrder.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
-            <td class="paper">
+            <td class="paper" >
                 <papertitle><b>OnlineOrder: A Spring and Hibernate based online food ordering system.</b>
                 </papertitle>
                 <p id="techstack"><i>Restful API, Spring MVC, Hibernate, Spring security, ReactJS, Ant Design, </i></p>
@@ -96,7 +96,7 @@
     </table>
 </div>
 <hr>
-<div class="project-entry">
+<div class="project-entry" id="CS_2"> 
     <div class="background-image" style="background-image: url('/img/Around.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
@@ -126,7 +126,7 @@
     </table>
 </div>
 <hr>
-<div class="project-entry">
+<div class="project-entry"  id="CS_3">
     <div class="background-image" style="background-image: url('/img/Tinnews.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
@@ -152,7 +152,7 @@
     </table>
 </div>
 <hr>
-<div class="project-entry">
+<div class="project-entry" id="CS_4">
     <div class="background-image" style="background-image: url('/img/StarLink.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
