--- a/source/Projects/index.html
+++ b/source/Projects/index.html
@@ -70,9 +70,9 @@
         
     }
 </style>
-<div class="project-entry" id="CS_1">
+<div id="CS_1" class="project-entry" >
     <div class="background-image" style="background-image: url('/img/OnlineOrder.png');"></div>
-    <table class="projects-table" style="width:100%; border-collapse: collapse;">
+    <table id="CS_1" class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
             <td class="paper" >
                 <papertitle><b>OnlineOrder: A Spring and Hibernate based online food ordering system.</b>
@@ -126,7 +126,7 @@
     </table>
 </div>
 <hr>
-<div class="project-entry"  id="CS_3">
+<div id="CS_3" class="project-entry"  >
     <div class="background-image" style="background-image: url('/img/Tinnews.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
