--- a/source/DSProjects/index.html
+++ b/source/DSProjects/index.html
@@ -70,7 +70,7 @@
         
     }
 </style>
-<div class="project-entry">
+<div class="project-entry" id="DS_1">
     <div class="background-image" style="background-image: url('/img/DS551_Club.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
@@ -96,7 +96,7 @@
     </table>
 </div>
 <hr>
-<div class="project-entry">
+<div class="project-entry" id="DS_2">
     <div class="background-image" style="background-image: url('/img/DS_HW2.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
@@ -124,7 +124,7 @@
     </table>
 </div>
 <hr>
-<div class="project-entry">
+<div class="project-entry" id="DS_3">
     <div class="background-image" style="background-image: url('/img/DS_HW3.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
@@ -150,7 +150,7 @@
     </table>
 </div>
 <hr>
-<div class="project-entry">
+<div class="project-entry" id="DS_4">
     <div class="background-image" style="background-image: url('/img/DS_HW6.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
@@ -178,7 +178,7 @@
 </div>
 <hr>
 <hr>
-<div class="project-entry">
+<div class="project-entry" id="DS_5">
     <div class="background-image" style="background-image: url('/img/DS_HW7.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
