--- a/source/SSCI/index.html
+++ b/source/SSCI/index.html
@@ -70,7 +70,7 @@
         
     }
 </style>
-<div class="project-entry">
+<div class="project-entry" id="SSCI_1">
     <div class="background-image" style="background-image: url('/img/SSCI575_P2.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
@@ -96,7 +96,7 @@
     </table>
 </div>
 <hr>
-<div class="project-entry">
+<div class="project-entry" id="SSCI_2">
     <div class="background-image" style="background-image: url('/img/StoryMap.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
@@ -124,7 +124,7 @@
     </table>
 </div>
 <hr>
-<div class="project-entry">
+<div class="project-entry" id="SSCI_3">
     <div class="background-image" style="background-image: url('/img/Python.png');"></div>
     <table class="projects-table" style="width:100%; border-collapse: collapse;">
         <tr>
